tests/artifacts/ingress-regular.out

Ingress/web -n test1, created 1m ago, gen:2
  Current: Resource is current
  Service port doesnt exist: Service/web:80 referenced in ingress, but Service doesn't have that port defined.
